fix: fixed the overlapping links for mobile view
fixed the overlapping links in projects page using display: block; and some margins

--- a/style.css
+++ b/style.css
@@ -136,7 +136,10 @@ hr {
 }
 
 .list-section .link {
-  margin-right: 1rem;
+  display: block;
+  margin: 0.5rem 0;
+  max-width: 6rem;
+  text-align: center;
 }
 
 .list-section .container-left {
